--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    scrollbar-width: thin;
+    scrollbar-color:#c2c6cc;
+  }
+  
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+    border-radius: 3px;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color:#c2c6cc;
+    border-radius: 14px;
+    border: 1px solid #fdfdfd;
+  }
+
 body {
     margin: 0;
 }
+
+ .editable-cell {
+     position: relative;
+  }
+
+  .editable-cell-value-wrap {
+    padding: 5px 12px;
+    cursor: pointer;
+  }
+
+  .editable-row:hover .editable-cell-value-wrap {
+    padding: 4px 11px;
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+  }
