--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,12 @@
+@font-face {
+  font-family: 'Lota';
+  src: url(/public//fonts/Los\ Andes\ -\ Lota\ Grotesque\ Light.otf)
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 * {
     scrollbar-width: thin;
@@ -25,6 +31,7 @@
 
 body {
     margin: 0;
+    font-family: "Lota";
 }
 
  .editable-cell {
