--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,8 @@
 
 @font-face {
   font-family: 'Lota';
-  src: url('../pages/Los\ Andes\ -\ Lota\ Grotesque\ Alt\ 1\ Light.otf');
+  src: url('../pages/Los\ Andes\ -\ Lota\ Grotesque\ Alt\ 1\ Light.otf'),
+  url('../pages/Los\ Andes\ -\ Lota\ Grotesque\ Alt\ 3\ Thin.otf');
 }
 
 
