--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,51 +1,49 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Lota';
-  src: url('../pages/Los\ Andes\ -\ Lota\ Grotesque\ Alt\ 1\ Light.otf'),
-  url('../pages/Los\ Andes\ -\ Lota\ Grotesque\ Alt\ 3\ Thin.otf');
+  font-family: "Lota";
+  src: url("../pages/Los\ Andes\ -\ Lota\ Grotesque\ Alt\ 1\ Light.otf"),
+    url("../pages/Los\ Andes\ -\ Lota\ Grotesque\ Alt\ 3\ Thin.otf");
 }
-
 
 * {
-    scrollbar-width: thin;
-    scrollbar-color:#c2c6cc;
-  }
-  
-  /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 8px;
-  }
-  
-  *::-webkit-scrollbar-track {
-    background: #ffffff;
-    border-radius: 3px;
-  }
-  
-  *::-webkit-scrollbar-thumb {
-    background-color:#c2c6cc;
-    border-radius: 14px;
-    border: 1px solid #fdfdfd;
-  }
-
-body {
-    margin: 0;
+  scrollbar-width: thin;
+  scrollbar-color: #c2c6cc;
 }
 
- .editable-cell {
-     position: relative;
-  }
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+}
 
-  .editable-cell-value-wrap {
-    padding: 5px 12px;
-    cursor: pointer;
-  }
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+  border-radius: 3px;
+}
 
-  .editable-row:hover .editable-cell-value-wrap {
-    padding: 4px 11px;
-    border: 1px solid #d9d9d9;
-    border-radius: 2px;
-  }
+*::-webkit-scrollbar-thumb {
+  background-color: #c2c6cc;
+  border-radius: 14px;
+  border: 1px solid #fdfdfd;
+}
+
+body {
+  margin: 0;
+}
+
+.editable-cell {
+  position: relative;
+}
+
+.editable-cell-value-wrap {
+  padding: 5px 12px;
+  cursor: pointer;
+}
+
+.editable-row:hover .editable-cell-value-wrap {
+  padding: 4px 11px;
+  border: 1px solid #d9d9d9;
+  border-radius: 2px;
+}
